Fix line break on buyApparel page

--- a/stylesheet/buyApparel.css
+++ b/stylesheet/buyApparel.css
@@ -48,7 +48,6 @@ p {
 .line-seperator {
   width: 100vw;
   border-top: 1px solid #b6b8b6;
-  grid-template-rows: 1 / 2;
 }
 
 img:hover {
@@ -60,6 +59,23 @@ img:hover {
   color: #5fcfb7;
 }
 
+/* Media Queries */
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .container {
     grid-template-columns: auto auto auto;
@@ -70,6 +86,6 @@ img:hover {
   }
 
   .line-seperator {
-    grid-template-columns: 4 / 1;
+    grid-column: 1 / 4;
   }
 }
